# urls_list_scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requests_maker.py  requirements.txt
utils/: contants.py  logger_formatter.py  request_manager.py
