[tool.poetry]
name = "urls_list_scanner"
version = "0.1.0"
description = "scans list of urls"
authors = ["jffin"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
aiohttp = "^3.7.3"
pypeln = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
